--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "3000:80"
 
-  # backend:
-  #   build: ./backend
-  #   ports:
-  #     - "8080:8080"
+  backend:
+    build: ./backend
+    ports:
+      - "8080:8080"
