--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   frontend:
     build: ./frontend
@@ -9,3 +8,21 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
+    env_file:
+      - .env
+    networks:
+      - mynetwork
+
+  ngrok:
+    image: wernight/ngrok
+    command: ngrok http backend:8080
+    ports:
+      - "4040:4040"
+    env_file:
+      - .env
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
